# vrptw-powerful-route-minimization-heuristic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.py  benchmark_results.json
.github/workflows/: test.yml
cmake/: compiler.cmake  profile.cmake
scripts/: build_pgo.sh  profile_gehring_flamegraph.sh
src/: c_penalty.c  c_penalty.h  cli.c  cli.h  customer.c  customer.h  dist.h  distance.c  distance.h  eama_solver.c  eama_solver.h  ejection.c  ejection.h  main.c  modification.c  modification.h  penalty_common.h  penalty_inline.h  problem.c  problem.h  problem_decode.cc  problem_decode.h  random_utils.c  random_utils.h  rlist_extra.h  route.c  route.h  solution.c  solution.cc  solution.h  solution_encode.cc  solution_encode.h  tw_penalty.c  tw_penalty.h  utils.h
src/lib/: CMakeLists.txt
src/lib/bit/: bit.h
src/lib/core/: CMakeLists.txt  cord_on_demand.cc  diag.c  diag.h  exception.cc  exception.h  fiber.c  fiber.h  random.c  random.h  say.c  say.h  tt_static.h  tt_strerror.c
src/lib/include/: rlist_persistent.h
src/lib/small_extra/: CMakeLists.txt
src/lib/small_extra/include/small_extra/: rlist_extra.h  rlist_persistent.h
src/lib/small_extra/test/: CMakeLists.txt  rlist_persistent.c
src/lib/test/: CMakeLists.txt  rlist_persistent.c
src/trivia/: util.h
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  c_penalty.c  distance.c  ejection.c  generators.c  generators.h  modification.c  penalty_test.h  random.c  random_modifications.h  tw_penalty.c
